# MLDataPreparer

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.csv
src/: main.py  pricerunner_aggregate.csv  test.csv  testNumpy.npy  times.csv
src/cli/: main.py
src/core/: exporter.py  loader.py  processor.py  validator.py
src/interface/: cli.py
src/interface/gui/: app.py
src/interface/gui/controllers/: data_controller.py
src/interface/gui/dialogs/: add_column_dialog.py  derived_column_dialog.py  drop_columns_dialog.py  expression_dialog.py  group_aggregate_dialog.py  preview_dialog.py  resample_dialog.py  rolling_dialog.py  separator_dialog.py  validation_dialog.py
src/interface/gui/models/: pandas_model.py
src/interface/gui/windows/: main_window.py
src/interface/ui/: main_window.ui
tests/: test_exporter.py  test_loader.py  test_processor.py  test_validator.py
